--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script src="jquery.js" type="text/javascript"></script>
-<script type="text/javascript" src="s.js" charset="utf-8"></script>
+<script type="text/javascript" src="sixpence.js" charset="utf-8"></script>
 <script type="text/javascript">
 
 $(document).ready(function() {
