--- a/example.html
+++ b/example.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <script src="jquery.js" type="text/javascript"></script>
-<script type="text/javascript" src="sixpence.js" charset="utf-8"></script>
+<script type="text/javascript" src="s.js" charset="utf-8"></script>
 <script type="text/javascript">
 
 $(document).ready(function() {
-	$('#sixpence').sixpence('torrez', 'http://notes.torrez.org/2011/08/sunday-morning-hack.html');
+	$('#sixpence').sixpence('torrez', 'http://notes.torrez.org/2011/10/hacking.html');
 });
 </script>
 
